<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".options_fragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="128dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/watch_time"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:text="@string/timer"
                android:layout_gravity="end"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/orange"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/question_text"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/options"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                />

            <Button
                android:id="@+id/option_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/loading"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/option_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/option_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/answer_show"
                android:layout_width="351dp"
                android:layout_height="37dp"
                android:text=""
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                />

            <Button
                android:id="@+id/next_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/next_btn"
                android:paddingHorizontal="150dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </ScrollView>

</FrameLayout>